# OpenPKPD

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  justfile  main.py  pyproject.toml
.github/workflows/: build-wheels.yml  release-wheels.yml
.r-lib/BH/: DESCRIPTION
.r-lib/Deriv/: DESCRIPTION
.r-lib/DescTools/: DESCRIPTION
.r-lib/Exact/: DESCRIPTION
.r-lib/Formula/: DESCRIPTION
.r-lib/Hmisc/: DESCRIPTION
.r-lib/PreciseSums/: DESCRIPTION  INDEX
.r-lib/R6/: DESCRIPTION
.r-lib/RColorBrewer/: DESCRIPTION
.r-lib/RCurl/: DESCRIPTION
.r-lib/Rcpp/: DESCRIPTION
.r-lib/RcppArmadillo/: DESCRIPTION
.r-lib/RcppEigen/: DESCRIPTION
.r-lib/RcppParallel/: DESCRIPTION
.r-lib/S7/: DESCRIPTION
.r-lib/StanHeaders/: DESCRIPTION
.r-lib/armadillo4r/: DESCRIPTION  INDEX
.r-lib/askpass/: DESCRIPTION
.r-lib/assertthat/: DESCRIPTION
.r-lib/backports/: DESCRIPTION
.r-lib/base64enc/: DESCRIPTION
.r-lib/binom/: DESCRIPTION
.r-lib/bit/: DESCRIPTION
.r-lib/bit64/: DESCRIPTION
.r-lib/bitops/: DESCRIPTION
.r-lib/bslib/: DESCRIPTION
.r-lib/cachem/: DESCRIPTION
.r-lib/cellranger/: DESCRIPTION
.r-lib/checkmate/: DESCRIPTION
.r-lib/cli/: DESCRIPTION
.r-lib/clipr/: DESCRIPTION
.r-lib/colorspace/: DESCRIPTION
.r-lib/commonmark/: DESCRIPTION
.r-lib/cpp11/: DESCRIPTION
.r-lib/cpp4r/: DESCRIPTION  INDEX
.r-lib/crayon/: DESCRIPTION
.r-lib/curl/: DESCRIPTION
.r-lib/decor/: DESCRIPTION
.r-lib/desc/: DESCRIPTION
.r-lib/digest/: DESCRIPTION
.r-lib/dparser/: DESCRIPTION  INDEX
.r-lib/dplyr/: DESCRIPTION
.r-lib/e1071/: DESCRIPTION
.r-lib/evaluate/: DESCRIPTION
.r-lib/expm/: DESCRIPTION
.r-lib/fastmap/: DESCRIPTION
.r-lib/fontawesome/: DESCRIPTION
.r-lib/forcats/: DESCRIPTION
.r-lib/fs/: DESCRIPTION
.r-lib/generics/: DESCRIPTION
.r-lib/ggplot2/: DESCRIPTION
.r-lib/ggtext/: DESCRIPTION
.r-lib/gld/: DESCRIPTION
.r-lib/glue/: DESCRIPTION
.r-lib/gridExtra/: DESCRIPTION
.r-lib/gridtext/: DESCRIPTION
.r-lib/gtable/: DESCRIPTION
.r-lib/haven/: DESCRIPTION
.r-lib/highr/: DESCRIPTION
.r-lib/hms/: DESCRIPTION
.r-lib/htmlTable/: DESCRIPTION
.r-lib/htmltools/: DESCRIPTION
.r-lib/htmlwidgets/: DESCRIPTION
.r-lib/httr/: DESCRIPTION
.r-lib/inline/: DESCRIPTION
.r-lib/isoband/: DESCRIPTION
.r-lib/jpeg/: DESCRIPTION
.r-lib/jquerylib/: DESCRIPTION
.r-lib/jsonlite/: DESCRIPTION
.r-lib/knitr/: DESCRIPTION
.r-lib/lazyeval/: DESCRIPTION
.r-lib/lbfgsb3c/: DESCRIPTION  INDEX
.r-lib/lifecycle/: DESCRIPTION
.r-lib/litedown/: DESCRIPTION
.r-lib/lmom/: DESCRIPTION
.r-lib/lotri/: DESCRIPTION  INDEX
.r-lib/magrittr/: DESCRIPTION
.r-lib/markdown/: DESCRIPTION
.r-lib/memoise/: DESCRIPTION
.r-lib/mime/: DESCRIPTION
.r-lib/minpack.lm/: DESCRIPTION
.r-lib/minqa/: DESCRIPTION
.r-lib/mvtnorm/: DESCRIPTION
.r-lib/n1qn1/: DESCRIPTION  INDEX
.r-lib/nlmixr2/: DESCRIPTION  INDEX
.r-lib/nlmixr2data/: DESCRIPTION  INDEX
.r-lib/nlmixr2est/: DESCRIPTION  INDEX
.r-lib/nlmixr2extra/: DESCRIPTION  INDEX
.r-lib/nlmixr2plot/: DESCRIPTION  INDEX
.r-lib/numDeriv/: DESCRIPTION
.r-lib/openssl/: DESCRIPTION
.r-lib/pander/: DESCRIPTION
.r-lib/pillar/: DESCRIPTION
.r-lib/pkgconfig/: DESCRIPTION
.r-lib/png/: DESCRIPTION
.r-lib/prettyunits/: DESCRIPTION
.r-lib/progress/: DESCRIPTION
.r-lib/proxy/: DESCRIPTION
.r-lib/purrr/: DESCRIPTION
.r-lib/qs2/: DESCRIPTION  INDEX
.r-lib/rappdirs/: DESCRIPTION
.r-lib/readr/: DESCRIPTION
.r-lib/readxl/: DESCRIPTION
.r-lib/rematch/: DESCRIPTION
.r-lib/rex/: DESCRIPTION
.r-lib/rlang/: DESCRIPTION
.r-lib/rmarkdown/: DESCRIPTION
.r-lib/rootSolve/: DESCRIPTION
.r-lib/rstudioapi/: DESCRIPTION
.r-lib/rxode2/: DESCRIPTION  INDEX
.r-lib/rxode2ll/: DESCRIPTION  INDEX
.r-lib/sass/: DESCRIPTION
.r-lib/scales/: DESCRIPTION
.r-lib/sitmo/: DESCRIPTION
.r-lib/stringfish/: DESCRIPTION
.r-lib/stringi/: DESCRIPTION
.r-lib/stringr/: DESCRIPTION
docs/: Makefile  building_installers.md  changelog.md  conf.py  contributing.md  developer_performance.md  index.md  make.bat  rinoh_index.md  roadmap.md
examples/: 01_theophylline_fo.py  02_warfarin_foce.py  03_two_compartment_iv.py  04_emax_pd_model.py  05_indirect_response.py  06_from_control_stream.py  07_diagnostic_plots.py  08_ode_transit_absorption.py  09_three_compartment.py  10_blq_handling.py  11_tte_model.py  12_nca.py  13_covariate_search.py  14_simulation_vpc.py  15_bayes_laplace.py  16_dde_model.py  17_sbml_import.py  18_parallel_bootstrap.py  19_count_categorical_models.py  20_saem_estimation.py  21_laplacian_prior.py  22_pbpk_model.py  23_iov_model.py  24_advanced_pd_models.py  25_focei_optimizer_controls.py  25_four_compartment_advan5.py  26_control_stream_optimizer_extensions.py  27_phenobarbital_population_pk.py  28_indometh_nca.py  29_optimal_design.py  30_four_compartment_advan5.py  31_impmap_warm_start.py  32_nonparametric_support_points.py  33_tmdd_model.py  34_multidose_ss_nca.py
notebooks/: 00_index.py  01_quickstart.py  02_data_handling.py  03_estimation_methods.py  04_simulation_vpc_npde.py  05_nca.py  06_pk_subroutines.py  07_pkpd_models.py  08_diagnostics_plots.py  09_covariate_modeling.py  10_inference_bootstrap.py  11_advanced.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: benchmark_estimation.py  build_installer.py  build_manylinux_wheel.sh  bump_version.py  check_installed_native_cvodes_wheel.py  check_native_cvodes.py  check_native_sensitivity_perf.py  check_release_tree.py  docker_smoke_test.sh  generate_capabilities_diagram.py  install_r_test_deps.R  installer.spec  prewarm_symbolic_cache.py  prewarm_symbolic_caches.py  profile_analysis.py  profile_pipelines.py  run_tests_and_report.sh  smoke_test_pypi.py  spike_cvode_wrap_warfarin_pkpd.py  spike_cvode_wrap_warfarin_pkpd_advanced.py  spike_cvode_wrap_warfarin_pkpd_population.py  spike_python_cvodes_warfarin_pkpd.py  split_individual.py
tests/: _release_validation.py  conftest.py
todo/: code_review_20260402.md  fix_plan_20260402.md  remaining_priorities.md
todos/: remaining_priorities.md
(+1901 files in other folders)
