[package]
name = "openpkpd-core"
version = "0.2.3"
edition = "2021"
description = "Compiled inner-loop extensions for OpenPKPD"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.22", features = ["extension-module"] }
numpy  = "0.22"
libm   = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
