[package]
name = "openpkpd-core"
version = "0.2.4"
edition = "2021"
description = "Compiled inner-loop extensions for OpenPKPD"
license = "AGPL-3.0-or-later"
homepage = "https://gitlab.com/breisfeld/OpenPKPD"
repository = "https://gitlab.com/breisfeld/OpenPKPD"
documentation = "https://openpkpd.readthedocs.io"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.22", features = ["extension-module"] }
numpy  = "0.22"
libm   = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
