[package]
name = "openpkpd-core"
version = "0.2.4"
edition = "2021"
description = "Compiled inner-loop extensions for OpenPKPD"
license = "AGPL-3.0-or-later"
homepage = "https://gitlab.com/breisfeld/OpenPKPD"
repository = "https://gitlab.com/breisfeld/OpenPKPD"
documentation = "https://openpkpd.readthedocs.io"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.22", features = ["extension-module", "generate-import-lib"] }
numpy  = "0.22"
libm   = "0.2"
cvode-wrap = { version = "0.1.3", optional = true }
sundials-sys = { version = "0.2.3", default-features = false, features = ["cvodes"], optional = true }

[features]
default = []
native-cvodes = [
    "dep:cvode-wrap",
    "dep:sundials-sys",
    "sundials-sys/build_libraries",
    "sundials-sys/static_libraries",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
